--- a/README.ipynb
+++ b/README.ipynb
@@ -27,7 +27,11 @@
     "\n",
     "Below are several basic Corporate Finance concepts that are useful throughout this highly challenging course:\n",
     "\n",
-    "- __CAPM formula__: $r_i = r_f + \\beta \\dot (r_m - r_f)$"
+    "- __CAPM formula__: $r_i = r_f + \\beta \\dot (r_m - r_f)$\n",
+    "\n",
+    "- __Free Cash Flow__ calculation: $\\text{FCF} = (1 - \\text{tax_rate}) \\cdot \\text{EBIT} + \\text{Depreciation} - \\text{Net Investments}$\n",
+    "\n",
+    "- \n"
    ]
   }
  ],
