refactor code for Technical Data case

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -39,11 +39,12 @@
     "from pprint import pprint\n",
     "import sympy\n",
     "\n",
-    "from HelpyFuncs.SymPy import sympy_eval_by_theano\n",
+    "from HelpyFuncs.SymPy import numpy_vector, sympy_eval_by_theano\n",
+    "    \n",
     "from HelpyFuncs.SymPy.Finance import \\\n",
-    "    net_present_value as npv, \\\n",
+    "    terminal_value as tv, \\\n",
     "    present_value as pv, \\\n",
-    "    terminal_value as tv"
+    "    net_present_value as npv"
    ]
   },
   {
@@ -370,9 +371,9 @@
    "source": [
     "exo_vars_values_dict = \\\n",
     "    dict(\n",
-    "        Rev=numpy.atleast_2d(numpy.array([0, 288000, 799350, 1181700], dtype=numpy.float32)).T,\n",
-    "        OpEx___neg=numpy.atleast_2d(numpy.array([0, -242774, -308991, -410010], dtype=numpy.float32)).T,\n",
-    "        extra_exec_comp___neg=numpy.atleast_2d(numpy.array([0, -2500, -75000, -140000], dtype=numpy.float32)).T,\n",
+    "        Rev=numpy_vector([0, 288000, 799350, 1181700]),\n",
+    "        OpEx___neg=numpy_vector([0, -242774, -308991, -410010]),\n",
+    "        extra_exec_comp___neg=numpy_vector([0, -2500, -75000, -140000]),\n",
     "        corp_tax_rate=US_CORP_TAX_RATE,\n",
     "        risk_free_rate=RISK_FREE_RATE,\n",
     "        pub_mkt_return=PUB_MKT_RETURN,\n",
