--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -393,7 +393,11 @@
    "outputs": [],
    "source": [
     "# function to calculate values from SymPy expression\n",
-    "calc = lambda sympy_expr: sympy_eval_by_theano(sympy_expr, symbols=exo_vars, **exo_vars_values_dict)"
+    "calc = lambda sympy_expr: \\\n",
+    "    sympy_eval_by_theano(\n",
+    "        sympy_expr,\n",
+    "        symbols=exo_vars,\n",
+    "        **exo_vars_values_dict)"
    ]
   },
   {
@@ -428,18 +432,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Risk-Free Rate = 0.11\n",
-      "Public-Market Return = 0.19\n",
+      "U.S. Corporate Tax Rate =   48%\n",
       "\n",
-      "Stabilized Beta = 1.00\n",
-      "Long-Term Discount Rate = 0.19\n",
+      "Risk-Free Rate =   11%\n",
+      "Public-Market Return =   19%\n",
       "\n",
-      "PEVC Beta = 2.00\n",
-      "Discount Rate for Pro-Forma Period = 0.27\n",
+      "Stabilized Beta =   1x\n",
+      "Long-Term Discount Rate =   19%\n",
       "\n",
-      "Valuation of FCF before TV = $0.31 MM\n",
-      "Valuation of TV = $1.91 MM\n",
-      "VALUATION = $2.23 MM\n",
+      "PEVC Beta =   2x\n",
+      "Discount Rate for Pro-Forma Period =   27%\n",
+      "\n",
+      "Valuation of FCF before TV =   $0.31 MM\n",
+      "Valuation of TV =   $1.91 MM\n",
+      "\n",
+      "VALUATION =   $2.23 MM\n",
       "\n",
       "Detailed Cash Flow Calcs:\n"
      ]
@@ -461,75 +468,66 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Revenue</th>\n",
-       "      <td>0</td>\n",
-       "      <td>288000.000000</td>\n",
-       "      <td>799350.000000</td>\n",
-       "      <td>1181700.00000</td>\n",
+       "      <td>$ 0</td>\n",
+       "      <td>$ 288,000</td>\n",
+       "      <td>$ 799,350</td>\n",
+       "      <td>$ 1,181,700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Operating Expenses</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-242774.000000</td>\n",
-       "      <td>-308991.000000</td>\n",
-       "      <td>-410010.00000</td>\n",
+       "      <td>$ 0</td>\n",
+       "      <td>$ -242,774</td>\n",
+       "      <td>$ -308,991</td>\n",
+       "      <td>$ -410,010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Adj. for Extra Exec. Comp.</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-2500.000000</td>\n",
-       "      <td>-75000.000000</td>\n",
-       "      <td>-140000.00000</td>\n",
+       "      <td>$ 0</td>\n",
+       "      <td>$ -2,500</td>\n",
+       "      <td>$ -75,000</td>\n",
+       "      <td>$ -140,000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EBIT</th>\n",
-       "      <td>0</td>\n",
-       "      <td>42726.000000</td>\n",
-       "      <td>415359.000000</td>\n",
-       "      <td>631690.00000</td>\n",
+       "      <td>$ 0</td>\n",
+       "      <td>$ 42,726</td>\n",
+       "      <td>$ 415,359</td>\n",
+       "      <td>$ 631,690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EBIAT</th>\n",
-       "      <td>0</td>\n",
-       "      <td>22217.519531</td>\n",
-       "      <td>215986.671875</td>\n",
-       "      <td>328478.78125</td>\n",
+       "      <td>$ 0</td>\n",
+       "      <td>$ 22,218</td>\n",
+       "      <td>$ 215,987</td>\n",
+       "      <td>$ 328,479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FCF before Terminal Value</th>\n",
-       "      <td>0</td>\n",
-       "      <td>22217.519531</td>\n",
-       "      <td>215986.671875</td>\n",
-       "      <td>328478.78125</td>\n",
+       "      <td>$ 0</td>\n",
+       "      <td>$ 22,218</td>\n",
+       "      <td>$ 215,987</td>\n",
+       "      <td>$ 328,479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Terminal Value</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>3225064.00000</td>\n",
+       "      <td>$ 0</td>\n",
+       "      <td>$ 0</td>\n",
+       "      <td>$ 0</td>\n",
+       "      <td>$ 3,225,064</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            Year 0           1981           1982  \\\n",
-       "Revenue                          0  288000.000000  799350.000000   \n",
-       "Operating Expenses               0 -242774.000000 -308991.000000   \n",
-       "Adj. for Extra Exec. Comp.       0   -2500.000000  -75000.000000   \n",
-       "EBIT                             0   42726.000000  415359.000000   \n",
-       "EBIAT                            0   22217.519531  215986.671875   \n",
-       "FCF before Terminal Value        0   22217.519531  215986.671875   \n",
-       "Terminal Value                   0       0.000000       0.000000   \n",
-       "\n",
-       "                                     1983  \n",
-       "Revenue                     1181700.00000  \n",
-       "Operating Expenses          -410010.00000  \n",
-       "Adj. for Extra Exec. Comp.  -140000.00000  \n",
-       "EBIT                         631690.00000  \n",
-       "EBIAT                        328478.78125  \n",
-       "FCF before Terminal Value    328478.78125  \n",
-       "Terminal Value              3225064.00000  "
+       "                            Year 0       1981       1982        1983\n",
+       "Revenue                        $ 0  $ 288,000  $ 799,350 $ 1,181,700\n",
+       "Operating Expenses             $ 0 $ -242,774 $ -308,991  $ -410,010\n",
+       "Adj. for Extra Exec. Comp.     $ 0   $ -2,500  $ -75,000  $ -140,000\n",
+       "EBIT                           $ 0   $ 42,726  $ 415,359   $ 631,690\n",
+       "EBIAT                          $ 0   $ 22,218  $ 215,987   $ 328,479\n",
+       "FCF before Terminal Value      $ 0   $ 22,218  $ 215,987   $ 328,479\n",
+       "Terminal Value                 $ 0        $ 0        $ 0 $ 3,225,064"
       ]
      },
      "execution_count": 14,
@@ -540,19 +538,24 @@
    "source": [
     "# present whole calculations\n",
     "\n",
-    "print('Risk-Free Rate = %.2f' % calc(risk_free_rate))\n",
-    "print('Public-Market Return = %.2f\\n' % calc(pub_mkt_return))\n",
+    "print('U.S. Corporate Tax Rate =   %s\\n' % '{:.0%}'.format(float(calc(corp_tax_rate))))\n",
     "\n",
-    "print('Stabilized Beta = %.2f' % calc(stabilized_beta))\n",
-    "print('Long-Term Discount Rate = %.2f\\n' % calc(long_term_discount_rate))\n",
+    "print('Risk-Free Rate =   %s' % '{:.0%}'.format(float(calc(risk_free_rate))))\n",
+    "print('Public-Market Return =   %s\\n' % '{:.0%}'.format(float(calc(pub_mkt_return))))\n",
     "\n",
-    "print('PEVC Beta = %.2f' % calc(pevc_beta))\n",
-    "print('Discount Rate for Pro-Forma Period = %.2f\\n' % calc(pro_forma_period_discount_rate))\n",
+    "print('Stabilized Beta =   %.0fx' % calc(stabilized_beta))\n",
+    "print('Long-Term Discount Rate =   %s\\n' % '{:.0%}'.format(float(calc(long_term_discount_rate))))\n",
     "\n",
-    "print('Valuation of FCF before TV = $%.2f MM' % (calc(val_of_FCF_before_TV) / 1e6))\n",
-    "print('Valuation of TV = $%.2f MM' % (calc(val_of_terminal_val) / 1e6))\n",
-    "print('VALUATION = $%.2f MM\\n' % (calc(val) / 1e6))\n",
+    "print('PEVC Beta =   %.0fx' % calc(pevc_beta))\n",
+    "print('Discount Rate for Pro-Forma Period =   %s\\n' % '{:.0%}'.format(float(calc(pro_forma_period_discount_rate))))\n",
     "\n",
+    "print('Valuation of FCF before TV =   $%.2f MM' % (calc(val_of_FCF_before_TV) / 1e6))\n",
+    "print('Valuation of TV =   $%.2f MM' % (calc(val_of_terminal_val) / 1e6))\n",
+    "print('\\nVALUATION =   $%.2f MM\\n' % (calc(val) / 1e6))\n",
+    "\n",
+    "# print Valuation Calcs data frame\n",
+    "# ref: http://pandas.pydata.org/pandas-docs/stable/generated/pandas.set_option.html\n",
+    "pandas.options.display.float_format = '$ {:,.0f}'.format\n",
     "print('Detailed Cash Flow Calcs:')\n",
     "val_calcs_df.T"
    ]
