minor change to number formatting

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -468,66 +468,66 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Revenue</th>\n",
-       "      <td>$ 0</td>\n",
-       "      <td>$ 288,000</td>\n",
-       "      <td>$ 799,350</td>\n",
-       "      <td>$ 1,181,700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>288,000</td>\n",
+       "      <td>799,350</td>\n",
+       "      <td>1,181,700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Operating Expenses</th>\n",
-       "      <td>$ 0</td>\n",
-       "      <td>$ -242,774</td>\n",
-       "      <td>$ -308,991</td>\n",
-       "      <td>$ -410,010</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-242,774</td>\n",
+       "      <td>-308,991</td>\n",
+       "      <td>-410,010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Adj. for Extra Exec. Comp.</th>\n",
-       "      <td>$ 0</td>\n",
-       "      <td>$ -2,500</td>\n",
-       "      <td>$ -75,000</td>\n",
-       "      <td>$ -140,000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2,500</td>\n",
+       "      <td>-75,000</td>\n",
+       "      <td>-140,000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EBIT</th>\n",
-       "      <td>$ 0</td>\n",
-       "      <td>$ 42,726</td>\n",
-       "      <td>$ 415,359</td>\n",
-       "      <td>$ 631,690</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42,726</td>\n",
+       "      <td>415,359</td>\n",
+       "      <td>631,690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EBIAT</th>\n",
-       "      <td>$ 0</td>\n",
-       "      <td>$ 22,218</td>\n",
-       "      <td>$ 215,987</td>\n",
-       "      <td>$ 328,479</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22,218</td>\n",
+       "      <td>215,987</td>\n",
+       "      <td>328,479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FCF before Terminal Value</th>\n",
-       "      <td>$ 0</td>\n",
-       "      <td>$ 22,218</td>\n",
-       "      <td>$ 215,987</td>\n",
-       "      <td>$ 328,479</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22,218</td>\n",
+       "      <td>215,987</td>\n",
+       "      <td>328,479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Terminal Value</th>\n",
-       "      <td>$ 0</td>\n",
-       "      <td>$ 0</td>\n",
-       "      <td>$ 0</td>\n",
-       "      <td>$ 3,225,064</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3,225,064</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            Year 0       1981       1982        1983\n",
-       "Revenue                        $ 0  $ 288,000  $ 799,350 $ 1,181,700\n",
-       "Operating Expenses             $ 0 $ -242,774 $ -308,991  $ -410,010\n",
-       "Adj. for Extra Exec. Comp.     $ 0   $ -2,500  $ -75,000  $ -140,000\n",
-       "EBIT                           $ 0   $ 42,726  $ 415,359   $ 631,690\n",
-       "EBIAT                          $ 0   $ 22,218  $ 215,987   $ 328,479\n",
-       "FCF before Terminal Value      $ 0   $ 22,218  $ 215,987   $ 328,479\n",
-       "Terminal Value                 $ 0        $ 0        $ 0 $ 3,225,064"
+       "                            Year 0     1981     1982      1983\n",
+       "Revenue                          0  288,000  799,350 1,181,700\n",
+       "Operating Expenses               0 -242,774 -308,991  -410,010\n",
+       "Adj. for Extra Exec. Comp.       0   -2,500  -75,000  -140,000\n",
+       "EBIT                             0   42,726  415,359   631,690\n",
+       "EBIAT                            0   22,218  215,987   328,479\n",
+       "FCF before Terminal Value        0   22,218  215,987   328,479\n",
+       "Terminal Value                   0        0        0 3,225,064"
       ]
      },
      "execution_count": 14,
@@ -555,7 +555,7 @@
     "\n",
     "# print Valuation Calcs data frame\n",
     "# ref: http://pandas.pydata.org/pandas-docs/stable/generated/pandas.set_option.html\n",
-    "pandas.options.display.float_format = '$ {:,.0f}'.format\n",
+    "pandas.options.display.float_format = '{:,.0f}'.format\n",
     "print('Detailed Cash Flow Calcs:')\n",
     "val_calcs_df.T"
    ]
