change module import for Technical Data workbook

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -38,13 +38,13 @@
     "import pandas\n",
     "from pprint import pprint\n",
     "import sympy\n",
-    "\n",
-    "from HelpyFuncs.SymPy import numpy_vector, sympy_eval_by_theano\n",
     "    \n",
-    "from HelpyFuncs.SymPy.Finance import \\\n",
+    "from FinSymPy.Valuation import \\\n",
     "    terminal_value as tv, \\\n",
     "    present_value as pv, \\\n",
-    "    net_present_value as npv"
+    "    net_present_value as npv\n",
+    "    \n",
+    "from HelpyFuncs.SymPy import numpy_vector, sympy_eval_by_theano"
    ]
   },
   {
