update Technical Data workbook

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -28,7 +28,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using gpu device 0: GeForce GT 750M\n"
+      "WARNING (theano.sandbox.cuda): CUDA is installed, but device gpu is not available  (error: Unable to get the number of gpus available: CUDA driver version is insufficient for CUDA runtime version)\n",
+      "WARNING:theano.sandbox.cuda:CUDA is installed, but device gpu is not available  (error: Unable to get the number of gpus available: CUDA driver version is insufficient for CUDA runtime version)\n"
      ]
     }
    ],
@@ -95,32 +96,83 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Revenue variables:\n",
+      " (Rev_0, Rev_1, Rev_2, Rev_3)\n",
+      "\n",
+      "Operating Expenses (negative) variables:\n",
+      " (OpEx___neg_0, OpEx___neg_1, OpEx___neg_2, OpEx___neg_3)\n",
+      "\n",
+      "Extra Executive Compensation (negative) variables:\n",
+      " (extra_exec_comp___neg_0, extra_exec_comp___neg_1, extra_exec_comp___neg_2, extra_exec_comp___neg_3)\n",
+      "\n",
+      "Corporate Tax Rate variable:\n",
+      " corp_tax_rate\n",
+      "\n",
+      "Long-Term Growth Rate variable:\n",
+      " long_term_growth_rate\n",
+      "\n",
+      "Risk-Free Rate variable:\n",
+      " risk_free_rate\n",
+      "\n",
+      "Public Market Return variable:\n",
+      " pub_mkt_return\n",
+      "\n",
+      "Stabilized Beta variable:\n",
+      " stabilized_beta\n",
+      "\n",
+      "Private Equity / Venture Capital Beta variable:\n",
+      " pevc_beta\n"
+     ]
+    }
+   ],
    "source": [
     "# Cash Flow components\n",
-    "Rev = sympy.MatrixSymbol('Rev', NB_PRO_FORMA_YEARS + 1, 1)\n",
-    "OpEx___neg = sympy.MatrixSymbol('OpEx___neg', NB_PRO_FORMA_YEARS + 1, 1)\n",
-    "extra_exec_comp___neg = sympy.MatrixSymbol('extra_exec_comp___neg', NB_PRO_FORMA_YEARS + 1, 1)\n",
+    "Rev = sympy.symbols('Rev_:%d' % (NB_PRO_FORMA_YEARS + 1))\n",
+    "print('Revenue variables:\\n', Rev)\n",
+    "\n",
+    "OpEx___neg = sympy.symbols('OpEx___neg_:%d' % (NB_PRO_FORMA_YEARS + 1))\n",
+    "print('\\nOperating Expenses (negative) variables:\\n', OpEx___neg)\n",
+    "\n",
+    "extra_exec_comp___neg = sympy.symbols('extra_exec_comp___neg_:%d' % (NB_PRO_FORMA_YEARS + 1))\n",
+    "print('\\nExtra Executive Compensation (negative) variables:\\n', extra_exec_comp___neg)\n",
+    "\n",
     "\n",
     "# Corporate Tax Rate\n",
     "corp_tax_rate = sympy.Symbol('corp_tax_rate')\n",
+    "print('\\nCorporate Tax Rate variable:\\n', corp_tax_rate)\n",
+    "\n",
     "\n",
     "# Long-Term Growth Rate\n",
     "long_term_growth_rate = sympy.Symbol('long_term_growth_rate')\n",
+    "print('\\nLong-Term Growth Rate variable:\\n', long_term_growth_rate)\n",
+    "\n",
     "\n",
     "# CAPM Paramaters\n",
     "risk_free_rate = sympy.Symbol('risk_free_rate')\n",
-    "pub_mkt_return = sympy.Symbol('pub_mkt_return')\n",
-    "stabilized_beta = sympy.Symbol('stabilized_beta')\n",
-    "pevc_beta = sympy.Symbol('pevc_beta')\n",
+    "print('\\nRisk-Free Rate variable:\\n', risk_free_rate)\n",
     "\n",
-    "# assemble all exogenous variables into a dict\n",
+    "pub_mkt_return = sympy.Symbol('pub_mkt_return')\n",
+    "print('\\nPublic Market Return variable:\\n', pub_mkt_return)\n",
+    "\n",
+    "stabilized_beta = sympy.Symbol('stabilized_beta')\n",
+    "print('\\nStabilized Beta variable:\\n', stabilized_beta)\n",
+    "\n",
+    "pevc_beta = sympy.Symbol('pevc_beta')\n",
+    "print('\\nPrivate Equity / Venture Capital Beta variable:\\n', pevc_beta)\n",
+    "\n",
+    "\n",
+    "# assemble all exogenous variables into a collection\n",
     "exo_vars = \\\n",
-    "    [Rev, OpEx___neg, extra_exec_comp___neg,\n",
-    "     corp_tax_rate,\n",
+    "    Rev + OpEx___neg + extra_exec_comp___neg + \\\n",
+    "    (corp_tax_rate,\n",
     "     long_term_growth_rate,\n",
     "     risk_free_rate, pub_mkt_return,\n",
-    "     stabilized_beta, pevc_beta]"
+    "     stabilized_beta, pevc_beta)"
    ]
   },
   {
@@ -148,14 +200,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EBIT = OpEx___neg + Rev + extra_exec_comp___neg\n"
+      "EBIT =\n",
+      "[OpEx___neg_0 + Rev_0 + extra_exec_comp___neg_0,\n",
+      " OpEx___neg_1 + Rev_1 + extra_exec_comp___neg_1,\n",
+      " OpEx___neg_2 + Rev_2 + extra_exec_comp___neg_2,\n",
+      " OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3]\n"
      ]
     }
    ],
    "source": [
-    "EBIT = Rev + OpEx___neg + extra_exec_comp___neg\n",
+    "EBIT = map(\n",
+    "    lambda x: reduce(lambda u, v: u + v, x), \n",
+    "    zip(Rev, OpEx___neg, extra_exec_comp___neg))\n",
     "\n",
-    "print('EBIT =', EBIT)"
+    "print('EBIT =')\n",
+    "pprint(EBIT)"
    ]
   },
   {
@@ -176,14 +235,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EBIAT = (-corp_tax_rate + 1)*(OpEx___neg + Rev + extra_exec_comp___neg)\n"
+      "EBIAT =\n",
+      "[(-corp_tax_rate + 1)*(OpEx___neg_0 + Rev_0 + extra_exec_comp___neg_0),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_1 + Rev_1 + extra_exec_comp___neg_1),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_2 + Rev_2 + extra_exec_comp___neg_2),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3)]\n"
      ]
     }
    ],
    "source": [
-    "EBIAT = (1 - corp_tax_rate) * EBIT\n",
+    "EBIAT = map(\n",
+    "    lambda x: (1 - corp_tax_rate) * x,\n",
+    "    EBIT)\n",
     "\n",
-    "print('EBIAT =', EBIAT)"
+    "print('EBIAT =')\n",
+    "pprint(EBIAT)"
    ]
   },
   {
@@ -206,14 +272,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FCF_before_TV = (-corp_tax_rate + 1)*(OpEx___neg + Rev + extra_exec_comp___neg)\n"
+      "FCF_before_TV =\n",
+      "[(-corp_tax_rate + 1)*(OpEx___neg_0 + Rev_0 + extra_exec_comp___neg_0),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_1 + Rev_1 + extra_exec_comp___neg_1),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_2 + Rev_2 + extra_exec_comp___neg_2),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3)]\n"
      ]
     }
    ],
    "source": [
     "FCF_before_TV = EBIAT\n",
     "\n",
-    "print('FCF_before_TV =', FCF_before_TV)"
+    "print('FCF_before_TV =')\n",
+    "pprint(FCF_before_TV)"
    ]
   },
   {
@@ -234,7 +305,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pro-Forma Period Discount Rate = pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate\n"
+      "Pro-Forma Period Discount Rate =\n",
+      " pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate\n"
      ]
     }
    ],
@@ -242,7 +314,9 @@
     "pro_forma_period_discount_rate = \\\n",
     "    risk_free_rate + pevc_beta * (pub_mkt_return - risk_free_rate)\n",
     "\n",
-    "print('Pro-Forma Period Discount Rate =', pro_forma_period_discount_rate)"
+    "print(\n",
+    "    'Pro-Forma Period Discount Rate =\\n',\n",
+    "    pro_forma_period_discount_rate)"
    ]
   },
   {
@@ -256,7 +330,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Long-Term Discount Rate = risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate)\n"
+      "Long-Term Discount Rate =\n",
+      " risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate)\n"
      ]
     }
    ],
@@ -264,7 +339,9 @@
     "long_term_discount_rate = \\\n",
     "    risk_free_rate + stabilized_beta * (pub_mkt_return - risk_free_rate)\n",
     "    \n",
-    "print('Long-Term Discount Rate =', long_term_discount_rate)"
+    "print(\n",
+    "    'Long-Term Discount Rate =\\n',\n",
+    "    long_term_discount_rate)"
    ]
   },
   {
@@ -285,14 +362,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TerminalValue = (long_term_growth_rate + 1)*Determinant((-corp_tax_rate + 1)*Matrix([[0, 0, 0, 1]])*(OpEx___neg + Rev + extra_exec_comp___neg))/(-long_term_growth_rate + risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate))\n"
+      "TerminalValue =\n",
+      " (-corp_tax_rate + 1)*(long_term_growth_rate + 1)*(OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3)/(-long_term_growth_rate + risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate))\n"
      ]
     }
    ],
    "source": [
-    "TerminalValue = tv(FCF_before_TV, long_term_discount_rate, long_term_growth_rate)\n",
+    "TerminalValue = tv(FCF_before_TV[-1], long_term_discount_rate, long_term_growth_rate)\n",
     "    \n",
-    "print('TerminalValue =', TerminalValue)"
+    "print('TerminalValue =\\n', TerminalValue)"
    ]
   },
   {
@@ -315,7 +393,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valuation = (long_term_growth_rate + 1)*Determinant((-corp_tax_rate + 1)*Matrix([[0, 0, 0, 1]])*(OpEx___neg + Rev + extra_exec_comp___neg))/((-long_term_growth_rate + risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate))*(risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate) + 1)**3) + Determinant((-corp_tax_rate + 1)*Matrix([[1, 1/(pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1), (pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1)**(-2), (pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1)**(-3)]])*(OpEx___neg + Rev + extra_exec_comp___neg))\n"
+      "Valuation =\n",
+      " (-corp_tax_rate + 1)*(long_term_growth_rate + 1)*(OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3)/((-long_term_growth_rate + risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate))*(risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate) + 1)**3) + (-corp_tax_rate + 1)*(OpEx___neg_0 + Rev_0 + extra_exec_comp___neg_0) + (-corp_tax_rate + 1)*(OpEx___neg_1 + Rev_1 + extra_exec_comp___neg_1)/(pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1) + (-corp_tax_rate + 1)*(OpEx___neg_2 + Rev_2 + extra_exec_comp___neg_2)/(pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1)**2 + (-corp_tax_rate + 1)*(OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3)/(pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1)**3\n"
      ]
     }
    ],
@@ -326,7 +405,7 @@
     "\n",
     "val = val_of_FCF_before_TV + val_of_terminal_val\n",
     "\n",
-    "print('Valuation =', val)"
+    "print('Valuation =\\n', val)"
    ]
   },
   {
@@ -347,19 +426,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'OpEx___neg': array([[      0.],\n",
-      "       [-242774.],\n",
-      "       [-308991.],\n",
-      "       [-410010.]], dtype=float32),\n",
-      " 'Rev': array([[       0.],\n",
-      "       [  288000.],\n",
-      "       [  799350.],\n",
-      "       [ 1181700.]], dtype=float32),\n",
+      "{'OpEx___neg_0': 0,\n",
+      " 'OpEx___neg_1': -242774,\n",
+      " 'OpEx___neg_2': -308991,\n",
+      " 'OpEx___neg_3': -410010,\n",
+      " 'Rev_0': 0,\n",
+      " 'Rev_1': 288000,\n",
+      " 'Rev_2': 799350,\n",
+      " 'Rev_3': 1181700,\n",
       " 'corp_tax_rate': 0.48,\n",
-      " 'extra_exec_comp___neg': array([[      0.],\n",
-      "       [  -2500.],\n",
-      "       [ -75000.],\n",
-      "       [-140000.]], dtype=float32),\n",
+      " 'extra_exec_comp___neg_0': 0,\n",
+      " 'extra_exec_comp___neg_1': -2500,\n",
+      " 'extra_exec_comp___neg_2': -75000,\n",
+      " 'extra_exec_comp___neg_3': -140000,\n",
       " 'long_term_growth_rate': 0.08,\n",
       " 'pevc_beta': 2.0,\n",
       " 'pub_mkt_return': 0.19,\n",
@@ -371,9 +450,6 @@
    "source": [
     "exo_vars_values_dict = \\\n",
     "    dict(\n",
-    "        Rev=numpy_vector([0, 288000, 799350, 1181700]),\n",
-    "        OpEx___neg=numpy_vector([0, -242774, -308991, -410010]),\n",
-    "        extra_exec_comp___neg=numpy_vector([0, -2500, -75000, -140000]),\n",
     "        corp_tax_rate=US_CORP_TAX_RATE,\n",
     "        risk_free_rate=RISK_FREE_RATE,\n",
     "        pub_mkt_return=PUB_MKT_RETURN,\n",
@@ -381,6 +457,15 @@
     "        stabilized_beta=PUB_MKT_BETA_FOR_FIN_SECTOR,\n",
     "        long_term_growth_rate=LONG_TERM_GROWTH_RATE)\n",
     "    \n",
+    "exo_vars_values_dict.update(\n",
+    "    dict(\n",
+    "        zip([i.name for i in Rev],\n",
+    "            [0, 288000, 799350, 1181700]) +\n",
+    "        zip([i.name for i in OpEx___neg],\n",
+    "            [0, -242774, -308991, -410010]) +\n",
+    "        zip([i.name for i in extra_exec_comp___neg],\n",
+    "            [0, -2500, -75000, -140000])))\n",
+    "\n",
     "pprint(exo_vars_values_dict)"
    ]
   },
@@ -393,11 +478,11 @@
    "outputs": [],
    "source": [
     "# function to calculate values from SymPy expression\n",
-    "calc = lambda sympy_expr: \\\n",
-    "    sympy_eval_by_theano(\n",
-    "        sympy_expr,\n",
-    "        symbols=exo_vars,\n",
-    "        **exo_vars_values_dict)"
+    "def calc(x):\n",
+    "    if isinstance(x, (list, tuple)):\n",
+    "        return [calc(i) for i in x]\n",
+    "    else:\n",
+    "        return sympy_eval_by_theano(x, symbols=exo_vars, **exo_vars_values_dict)"
    ]
   },
   {
@@ -468,66 +553,66 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Revenue</th>\n",
-       "      <td>0</td>\n",
-       "      <td>288,000</td>\n",
-       "      <td>799,350</td>\n",
-       "      <td>1,181,700</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>288000.0</td>\n",
+       "      <td>799350.0</td>\n",
+       "      <td>1181700.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Operating Expenses</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-242,774</td>\n",
-       "      <td>-308,991</td>\n",
-       "      <td>-410,010</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-242774.0</td>\n",
+       "      <td>-308991.0</td>\n",
+       "      <td>-410010.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Adj. for Extra Exec. Comp.</th>\n",
-       "      <td>0</td>\n",
-       "      <td>-2,500</td>\n",
-       "      <td>-75,000</td>\n",
-       "      <td>-140,000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-2500.0</td>\n",
+       "      <td>-75000.0</td>\n",
+       "      <td>-140000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EBIT</th>\n",
-       "      <td>0</td>\n",
-       "      <td>42,726</td>\n",
-       "      <td>415,359</td>\n",
-       "      <td>631,690</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>42726.0</td>\n",
+       "      <td>415359.0</td>\n",
+       "      <td>631690.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EBIAT</th>\n",
-       "      <td>0</td>\n",
-       "      <td>22,218</td>\n",
-       "      <td>215,987</td>\n",
-       "      <td>328,479</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22217.5195312</td>\n",
+       "      <td>215986.671875</td>\n",
+       "      <td>328478.78125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FCF before Terminal Value</th>\n",
-       "      <td>0</td>\n",
-       "      <td>22,218</td>\n",
-       "      <td>215,987</td>\n",
-       "      <td>328,479</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22217.5195312</td>\n",
+       "      <td>215986.671875</td>\n",
+       "      <td>328478.78125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Terminal Value</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>3,225,064</td>\n",
+       "      <td>3225064</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            Year 0     1981     1982      1983\n",
-       "Revenue                          0  288,000  799,350 1,181,700\n",
-       "Operating Expenses               0 -242,774 -308,991  -410,010\n",
-       "Adj. for Extra Exec. Comp.       0   -2,500  -75,000  -140,000\n",
-       "EBIT                             0   42,726  415,359   631,690\n",
-       "EBIAT                            0   22,218  215,987   328,479\n",
-       "FCF before Terminal Value        0   22,218  215,987   328,479\n",
-       "Terminal Value                   0        0        0 3,225,064"
+       "                           Year 0           1981           1982          1983\n",
+       "Revenue                       0.0       288000.0       799350.0     1181700.0\n",
+       "Operating Expenses            0.0      -242774.0      -308991.0     -410010.0\n",
+       "Adj. for Extra Exec. Comp.    0.0        -2500.0       -75000.0     -140000.0\n",
+       "EBIT                          0.0        42726.0       415359.0      631690.0\n",
+       "EBIAT                         0.0  22217.5195312  215986.671875  328478.78125\n",
+       "FCF before Terminal Value     0.0  22217.5195312  215986.671875  328478.78125\n",
+       "Terminal Value                  0              0              0       3225064"
       ]
      },
      "execution_count": 14,
