update Technical Data workbook

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -28,8 +28,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING (theano.sandbox.cuda): CUDA is installed, but device gpu is not available  (error: Unable to get the number of gpus available: CUDA driver version is insufficient for CUDA runtime version)\n",
-      "WARNING:theano.sandbox.cuda:CUDA is installed, but device gpu is not available  (error: Unable to get the number of gpus available: CUDA driver version is insufficient for CUDA runtime version)\n"
+      "Using gpu device 0: GeForce GT 750M\n"
      ]
     }
    ],
@@ -480,9 +479,9 @@
     "# function to calculate values from SymPy expression\n",
     "def calc(x):\n",
     "    if isinstance(x, (list, tuple)):\n",
-    "        return [calc(i) for i in x]\n",
+    "        return [float(calc(i)) for i in x]\n",
     "    else:\n",
-    "        return sympy_eval_by_theano(x, symbols=exo_vars, **exo_vars_values_dict)"
+    "        return float(sympy_eval_by_theano(x, symbols=exo_vars, **exo_vars_values_dict))"
    ]
   },
   {
@@ -553,66 +552,66 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Revenue</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>288000.0</td>\n",
-       "      <td>799350.0</td>\n",
-       "      <td>1181700.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>288,000</td>\n",
+       "      <td>799,350</td>\n",
+       "      <td>1,181,700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Operating Expenses</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-242774.0</td>\n",
-       "      <td>-308991.0</td>\n",
-       "      <td>-410010.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-242,774</td>\n",
+       "      <td>-308,991</td>\n",
+       "      <td>-410,010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Adj. for Extra Exec. Comp.</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-2500.0</td>\n",
-       "      <td>-75000.0</td>\n",
-       "      <td>-140000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-2,500</td>\n",
+       "      <td>-75,000</td>\n",
+       "      <td>-140,000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EBIT</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>42726.0</td>\n",
-       "      <td>415359.0</td>\n",
-       "      <td>631690.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42,726</td>\n",
+       "      <td>415,359</td>\n",
+       "      <td>631,690</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>EBIAT</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22217.5195312</td>\n",
-       "      <td>215986.671875</td>\n",
-       "      <td>328478.78125</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22,218</td>\n",
+       "      <td>215,987</td>\n",
+       "      <td>328,479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FCF before Terminal Value</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22217.5195312</td>\n",
-       "      <td>215986.671875</td>\n",
-       "      <td>328478.78125</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22,218</td>\n",
+       "      <td>215,987</td>\n",
+       "      <td>328,479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Terminal Value</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>3225064</td>\n",
+       "      <td>3,225,064</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           Year 0           1981           1982          1983\n",
-       "Revenue                       0.0       288000.0       799350.0     1181700.0\n",
-       "Operating Expenses            0.0      -242774.0      -308991.0     -410010.0\n",
-       "Adj. for Extra Exec. Comp.    0.0        -2500.0       -75000.0     -140000.0\n",
-       "EBIT                          0.0        42726.0       415359.0      631690.0\n",
-       "EBIAT                         0.0  22217.5195312  215986.671875  328478.78125\n",
-       "FCF before Terminal Value     0.0  22217.5195312  215986.671875  328478.78125\n",
-       "Terminal Value                  0              0              0       3225064"
+       "                            Year 0     1981     1982      1983\n",
+       "Revenue                          0  288,000  799,350 1,181,700\n",
+       "Operating Expenses               0 -242,774 -308,991  -410,010\n",
+       "Adj. for Extra Exec. Comp.       0   -2,500  -75,000  -140,000\n",
+       "EBIT                             0   42,726  415,359   631,690\n",
+       "EBIAT                            0   22,218  215,987   328,479\n",
+       "FCF before Terminal Value        0   22,218  215,987   328,479\n",
+       "Terminal Value                   0        0        0 3,225,064"
       ]
      },
      "execution_count": 14,
@@ -623,16 +622,16 @@
    "source": [
     "# present whole calculations\n",
     "\n",
-    "print('U.S. Corporate Tax Rate =   %s\\n' % '{:.0%}'.format(float(calc(corp_tax_rate))))\n",
+    "print('U.S. Corporate Tax Rate =   %s\\n' % '{:.0%}'.format(calc(corp_tax_rate)))\n",
     "\n",
-    "print('Risk-Free Rate =   %s' % '{:.0%}'.format(float(calc(risk_free_rate))))\n",
-    "print('Public-Market Return =   %s\\n' % '{:.0%}'.format(float(calc(pub_mkt_return))))\n",
+    "print('Risk-Free Rate =   %s' % '{:.0%}'.format(calc(risk_free_rate)))\n",
+    "print('Public-Market Return =   %s\\n' % '{:.0%}'.format(calc(pub_mkt_return)))\n",
     "\n",
     "print('Stabilized Beta =   %.0fx' % calc(stabilized_beta))\n",
-    "print('Long-Term Discount Rate =   %s\\n' % '{:.0%}'.format(float(calc(long_term_discount_rate))))\n",
+    "print('Long-Term Discount Rate =   %s\\n' % '{:.0%}'.format(calc(long_term_discount_rate)))\n",
     "\n",
     "print('PEVC Beta =   %.0fx' % calc(pevc_beta))\n",
-    "print('Discount Rate for Pro-Forma Period =   %s\\n' % '{:.0%}'.format(float(calc(pro_forma_period_discount_rate))))\n",
+    "print('Discount Rate for Pro-Forma Period =   %s\\n' % '{:.0%}'.format(calc(pro_forma_period_discount_rate)))\n",
     "\n",
     "print('Valuation of FCF before TV =   $%.2f MM' % (calc(val_of_FCF_before_TV) / 1e6))\n",
     "print('Valuation of TV =   $%.2f MM' % (calc(val_of_terminal_val) / 1e6))\n",
