minor refactoring for Technical Data workbook

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -34,7 +34,6 @@
    ],
    "source": [
     "from __future__ import print_function\n",
-    "import numpy\n",
     "import pandas\n",
     "from pprint import pprint\n",
     "import sympy\n",
@@ -44,7 +43,7 @@
     "    present_value as pv, \\\n",
     "    net_present_value as npv\n",
     "    \n",
-    "from HelpyFuncs.SymPy import numpy_vector, sympy_eval_by_theano"
+    "from HelpyFuncs.SymPy import sympy_eval_by_theano"
    ]
   },
   {
