update Technical Data workbook

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -77,6 +77,9 @@
     "# Long-Term Growth Rate\n",
     "LONG_TERM_GROWTH_RATE = .08\n",
     "\n",
+    "# Year 0\n",
+    "YEAR_0 = 1980\n",
+    "\n",
     "# Number of Pro-Forma Years EXCLUDING Year 0\n",
     "NB_PRO_FORMA_YEARS = 3"
    ]
@@ -100,13 +103,13 @@
      "output_type": "stream",
      "text": [
       "Revenue variables:\n",
-      " (Rev_0, Rev_1, Rev_2, Rev_3)\n",
+      " (Rev_1980, Rev_1981, Rev_1982, Rev_1983)\n",
       "\n",
       "Operating Expenses (negative) variables:\n",
-      " (OpEx___neg_0, OpEx___neg_1, OpEx___neg_2, OpEx___neg_3)\n",
+      " (OpEx___neg_1980, OpEx___neg_1981, OpEx___neg_1982, OpEx___neg_1983)\n",
       "\n",
       "Extra Executive Compensation (negative) variables:\n",
-      " (extra_exec_comp___neg_0, extra_exec_comp___neg_1, extra_exec_comp___neg_2, extra_exec_comp___neg_3)\n",
+      " (extra_exec_comp___neg_1980, extra_exec_comp___neg_1981, extra_exec_comp___neg_1982, extra_exec_comp___neg_1983)\n",
       "\n",
       "Corporate Tax Rate variable:\n",
       " corp_tax_rate\n",
@@ -130,13 +133,16 @@
    ],
    "source": [
     "# Cash Flow components\n",
-    "Rev = sympy.symbols('Rev_:%d' % (NB_PRO_FORMA_YEARS + 1))\n",
+    "Rev = sympy.symbols(\n",
+    "    'Rev_%d:%d' % (YEAR_0, YEAR_0 + NB_PRO_FORMA_YEARS + 1))\n",
     "print('Revenue variables:\\n', Rev)\n",
     "\n",
-    "OpEx___neg = sympy.symbols('OpEx___neg_:%d' % (NB_PRO_FORMA_YEARS + 1))\n",
+    "OpEx___neg = sympy.symbols(\n",
+    "    'OpEx___neg_%d:%d' % (YEAR_0, YEAR_0 + NB_PRO_FORMA_YEARS + 1))\n",
     "print('\\nOperating Expenses (negative) variables:\\n', OpEx___neg)\n",
     "\n",
-    "extra_exec_comp___neg = sympy.symbols('extra_exec_comp___neg_:%d' % (NB_PRO_FORMA_YEARS + 1))\n",
+    "extra_exec_comp___neg = sympy.symbols(\n",
+    "    'extra_exec_comp___neg_%d:%d' % (YEAR_0, YEAR_0 + NB_PRO_FORMA_YEARS + 1))\n",
     "print('\\nExtra Executive Compensation (negative) variables:\\n', extra_exec_comp___neg)\n",
     "\n",
     "\n",
@@ -199,10 +205,10 @@
      "output_type": "stream",
      "text": [
       "EBIT =\n",
-      "[OpEx___neg_0 + Rev_0 + extra_exec_comp___neg_0,\n",
-      " OpEx___neg_1 + Rev_1 + extra_exec_comp___neg_1,\n",
-      " OpEx___neg_2 + Rev_2 + extra_exec_comp___neg_2,\n",
-      " OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3]\n"
+      "[OpEx___neg_1980 + Rev_1980 + extra_exec_comp___neg_1980,\n",
+      " OpEx___neg_1981 + Rev_1981 + extra_exec_comp___neg_1981,\n",
+      " OpEx___neg_1982 + Rev_1982 + extra_exec_comp___neg_1982,\n",
+      " OpEx___neg_1983 + Rev_1983 + extra_exec_comp___neg_1983]\n"
      ]
     }
    ],
@@ -234,10 +240,10 @@
      "output_type": "stream",
      "text": [
       "EBIAT =\n",
-      "[(-corp_tax_rate + 1)*(OpEx___neg_0 + Rev_0 + extra_exec_comp___neg_0),\n",
-      " (-corp_tax_rate + 1)*(OpEx___neg_1 + Rev_1 + extra_exec_comp___neg_1),\n",
-      " (-corp_tax_rate + 1)*(OpEx___neg_2 + Rev_2 + extra_exec_comp___neg_2),\n",
-      " (-corp_tax_rate + 1)*(OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3)]\n"
+      "[(-corp_tax_rate + 1)*(OpEx___neg_1980 + Rev_1980 + extra_exec_comp___neg_1980),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_1981 + Rev_1981 + extra_exec_comp___neg_1981),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_1982 + Rev_1982 + extra_exec_comp___neg_1982),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_1983 + Rev_1983 + extra_exec_comp___neg_1983)]\n"
      ]
     }
    ],
@@ -271,10 +277,10 @@
      "output_type": "stream",
      "text": [
       "FCF_before_TV =\n",
-      "[(-corp_tax_rate + 1)*(OpEx___neg_0 + Rev_0 + extra_exec_comp___neg_0),\n",
-      " (-corp_tax_rate + 1)*(OpEx___neg_1 + Rev_1 + extra_exec_comp___neg_1),\n",
-      " (-corp_tax_rate + 1)*(OpEx___neg_2 + Rev_2 + extra_exec_comp___neg_2),\n",
-      " (-corp_tax_rate + 1)*(OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3)]\n"
+      "[(-corp_tax_rate + 1)*(OpEx___neg_1980 + Rev_1980 + extra_exec_comp___neg_1980),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_1981 + Rev_1981 + extra_exec_comp___neg_1981),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_1982 + Rev_1982 + extra_exec_comp___neg_1982),\n",
+      " (-corp_tax_rate + 1)*(OpEx___neg_1983 + Rev_1983 + extra_exec_comp___neg_1983)]\n"
      ]
     }
    ],
@@ -361,7 +367,7 @@
      "output_type": "stream",
      "text": [
       "TerminalValue =\n",
-      " (-corp_tax_rate + 1)*(long_term_growth_rate + 1)*(OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3)/(-long_term_growth_rate + risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate))\n"
+      " (-corp_tax_rate + 1)*(long_term_growth_rate + 1)*(OpEx___neg_1983 + Rev_1983 + extra_exec_comp___neg_1983)/(-long_term_growth_rate + risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate))\n"
      ]
     }
    ],
@@ -392,7 +398,7 @@
      "output_type": "stream",
      "text": [
       "Valuation =\n",
-      " (-corp_tax_rate + 1)*(long_term_growth_rate + 1)*(OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3)/((-long_term_growth_rate + risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate))*(risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate) + 1)**3) + (-corp_tax_rate + 1)*(OpEx___neg_0 + Rev_0 + extra_exec_comp___neg_0) + (-corp_tax_rate + 1)*(OpEx___neg_1 + Rev_1 + extra_exec_comp___neg_1)/(pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1) + (-corp_tax_rate + 1)*(OpEx___neg_2 + Rev_2 + extra_exec_comp___neg_2)/(pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1)**2 + (-corp_tax_rate + 1)*(OpEx___neg_3 + Rev_3 + extra_exec_comp___neg_3)/(pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1)**3\n"
+      " (-corp_tax_rate + 1)*(long_term_growth_rate + 1)*(OpEx___neg_1983 + Rev_1983 + extra_exec_comp___neg_1983)/((-long_term_growth_rate + risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate))*(risk_free_rate + stabilized_beta*(pub_mkt_return - risk_free_rate) + 1)**3) + (-corp_tax_rate + 1)*(OpEx___neg_1980 + Rev_1980 + extra_exec_comp___neg_1980) + (-corp_tax_rate + 1)*(OpEx___neg_1981 + Rev_1981 + extra_exec_comp___neg_1981)/(pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1) + (-corp_tax_rate + 1)*(OpEx___neg_1982 + Rev_1982 + extra_exec_comp___neg_1982)/(pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1)**2 + (-corp_tax_rate + 1)*(OpEx___neg_1983 + Rev_1983 + extra_exec_comp___neg_1983)/(pevc_beta*(pub_mkt_return - risk_free_rate) + risk_free_rate + 1)**3\n"
      ]
     }
    ],
@@ -424,19 +430,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'OpEx___neg_0': 0,\n",
-      " 'OpEx___neg_1': -242774,\n",
-      " 'OpEx___neg_2': -308991,\n",
-      " 'OpEx___neg_3': -410010,\n",
-      " 'Rev_0': 0,\n",
-      " 'Rev_1': 288000,\n",
-      " 'Rev_2': 799350,\n",
-      " 'Rev_3': 1181700,\n",
+      "{'OpEx___neg_1980': 0,\n",
+      " 'OpEx___neg_1981': -242774,\n",
+      " 'OpEx___neg_1982': -308991,\n",
+      " 'OpEx___neg_1983': -410010,\n",
+      " 'Rev_1980': 0,\n",
+      " 'Rev_1981': 288000,\n",
+      " 'Rev_1982': 799350,\n",
+      " 'Rev_1983': 1181700,\n",
       " 'corp_tax_rate': 0.48,\n",
-      " 'extra_exec_comp___neg_0': 0,\n",
-      " 'extra_exec_comp___neg_1': -2500,\n",
-      " 'extra_exec_comp___neg_2': -75000,\n",
-      " 'extra_exec_comp___neg_3': -140000,\n",
+      " 'extra_exec_comp___neg_1980': 0,\n",
+      " 'extra_exec_comp___neg_1981': -2500,\n",
+      " 'extra_exec_comp___neg_1982': -75000,\n",
+      " 'extra_exec_comp___neg_1983': -140000,\n",
       " 'long_term_growth_rate': 0.08,\n",
       " 'pevc_beta': 2.0,\n",
       " 'pub_mkt_return': 0.19,\n",
